framec/tests/snapshots/kotlin_snapshots__lifecycle_args.snap
---
source: framec/tests/kotlin_snapshots.rs
expression: "compile_fixture(\"13_lifecycle_args\", \"kotlin\")"
---
class LifecycleArgsFrameEvent(val _message: String, val _parameters: MutableList<Any?> = mutableListOf())

class LifecycleArgsFrameContext(val _event: LifecycleArgsFrameEvent, var _return: Any? = null) {
    val _data: MutableMap<String, Any?> = mutableMapOf()
    var _transitioned: Boolean = false
}

class LifecycleArgsCompartment(val state: String) {
    val state_args: MutableList<Any?> = mutableListOf()
    val state_vars: MutableMap<String, Any?> = mutableMapOf()
    val enter_args: MutableList<Any?> = mutableListOf()
    val exit_args: MutableList<Any?> = mutableListOf()
    var forward_event: LifecycleArgsFrameEvent? = null
    var parent_compartment: LifecycleArgsCompartment? = null

    fun copy(): LifecycleArgsCompartment {
        val c = LifecycleArgsCompartment(this.state)
        c.state_args.addAll(this.state_args)
        c.state_vars.putAll(this.state_vars)
        c.enter_args.addAll(this.enter_args)
        c.exit_args.addAll(this.exit_args)
        c.forward_event = this.forward_event
        c.parent_compartment = this.parent_compartment
        return c
    }
}

class LifecycleArgs {
    private var _state_stack: MutableList<LifecycleArgsCompartment>
    private var __compartment: LifecycleArgsCompartment
    private var __next_compartment: LifecycleArgsCompartment?
    private var _context_stack: MutableList<LifecycleArgsFrameContext>
    var sum: Int = 0
    var label: String = ""

    init {
        _state_stack = mutableListOf()
        _context_stack = mutableListOf()
        this.__compartment = __prepareEnter("Idle", mutableListOf<Any?>(), mutableListOf<Any?>())
        this.__next_compartment = null
    }

    fun __frame_init() {
        val __e = LifecycleArgsFrameEvent("$>", __compartment.enter_args)
        val __ctx = LifecycleArgsFrameContext(__e, null)
        _context_stack.add(__ctx)
        __kernel(__e)
        _context_stack.removeAt(_context_stack.size - 1)
    }

    private fun hsm_chain(): Map<String, List<String>> {
        return mapOf(
            "Idle" to listOf("Idle"),
            "Active" to listOf("Active"),
        )
    }
    private fun __prepareEnter(leaf: String, state_args: MutableList<Any?>, enter_args: MutableList<Any?>): LifecycleArgsCompartment {
        var comp: LifecycleArgsCompartment? = null
        for (name in hsm_chain()[leaf]!!) {
            val new_comp = LifecycleArgsCompartment(name)
            new_comp.state_args.addAll(state_args)
            new_comp.enter_args.addAll(enter_args)
            new_comp.parent_compartment = comp
            comp = new_comp
        }
        return comp!!
    }

    private fun __prepareExit(exit_args: MutableList<Any?>) {
        var comp: LifecycleArgsCompartment? = __compartment
        while (comp != null) {
            comp.exit_args.clear()
            comp.exit_args.addAll(exit_args)
            comp = comp.parent_compartment
        }
    }

    private fun __kernel(__e: LifecycleArgsFrameEvent) {
        // Route event to current state.
        __router(__e)
        // Drain any transitions queued by the handler.
        while (__next_compartment != null) {
            val next_compartment: LifecycleArgsCompartment = __next_compartment!!
            __next_compartment = null
            // Exit the current (leaf) state.
            val exit_event = LifecycleArgsFrameEvent("<$", __compartment.exit_args)
            __router(exit_event)
            // Switch to the new compartment.
            __compartment = next_compartment
            // Three-branch forward-event handling.
            val forward_event: LifecycleArgsFrameEvent? = next_compartment.forward_event
            next_compartment.forward_event = null
            if (forward_event == null) {
                // No forwarded event — synthesize a fresh $>.
                val enter_event = LifecycleArgsFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
            } else if (forward_event._message == "$>") {
                // Forwarded event IS $> — dispatch directly so the
                // destination's $> handler receives the caller's payload.
                __router(forward_event)
            } else {
                // Forwarded event is not $> — initialize the destination
                // with a fresh $>, then dispatch the forward.
                val enter_event = LifecycleArgsFrameEvent("$>", __compartment.enter_args)
                __router(enter_event)
                __router(forward_event)
            }
            for (ctx in _context_stack) {
                ctx._transitioned = true
            }
        }
    }

    private fun __router(__e: LifecycleArgsFrameEvent) {
        if (__compartment.state == "Idle") {
            _state_Idle(__e, __compartment)
        } else if (__compartment.state == "Active") {
            _state_Active(__e, __compartment)
        }
    }

    private fun __transition(next: LifecycleArgsCompartment) {
        __next_compartment = next
    }

    fun load(n: Int, label: String) {
        val __e = LifecycleArgsFrameEvent("load", mutableListOf(n, label))
        val __ctx = LifecycleArgsFrameContext(__e, null)
        _context_stack.add(__ctx)
        try {
            __kernel(_context_stack[_context_stack.size - 1]._event)
            _context_stack.removeAt(_context_stack.size - 1)
        } catch (__frame_err: Throwable) {
            _context_stack.removeAt(_context_stack.size - 1)
            throw __frame_err
        }
    }

    fun total(): Int {
        val __e = LifecycleArgsFrameEvent("total", mutableListOf())
        val __ctx = LifecycleArgsFrameContext(__e, 0)
        _context_stack.add(__ctx)
        try {
            __kernel(_context_stack[_context_stack.size - 1]._event)
            val __result = _context_stack[_context_stack.size - 1]._return as Int
            _context_stack.removeAt(_context_stack.size - 1)
            return __result
        } catch (__frame_err: Throwable) {
            _context_stack.removeAt(_context_stack.size - 1)
            throw __frame_err
        }
    }

    fun tag(): String {
        val __e = LifecycleArgsFrameEvent("tag", mutableListOf())
        val __ctx = LifecycleArgsFrameContext(__e, "")
        _context_stack.add(__ctx)
        try {
            __kernel(_context_stack[_context_stack.size - 1]._event)
            val __result = _context_stack[_context_stack.size - 1]._return as String
            _context_stack.removeAt(_context_stack.size - 1)
            return __result
        } catch (__frame_err: Throwable) {
            _context_stack.removeAt(_context_stack.size - 1)
            throw __frame_err
        }
    }

    private fun _state_Idle(__e: LifecycleArgsFrameEvent, compartment: LifecycleArgsCompartment) {
        if (__e._message == "load") {
            this._s_Idle_hdl_user_load(__e, compartment)
            return
        }
    }

    private fun _state_Active(__e: LifecycleArgsFrameEvent, compartment: LifecycleArgsCompartment) {
        if (__e._message == "$>") {
            this._s_Active_hdl_frame_enter(__e, compartment)
            return
        }
        if (__e._message == "tag") {
            this._s_Active_hdl_user_tag(__e, compartment)
            return
        }
        if (__e._message == "total") {
            this._s_Active_hdl_user_total(__e, compartment)
            return
        }
    }

    private fun _s_Idle_hdl_user_load(__e: LifecycleArgsFrameEvent, compartment: LifecycleArgsCompartment) {
        val n = __e._parameters[0] as Int
        val label = __e._parameters[1] as String
        val __compartment = __prepareEnter("Active", mutableListOf<Any?>(), mutableListOf<Any?>(n, label))
        __transition(__compartment)
        return
    }

    private fun _s_Active_hdl_frame_enter(__e: LifecycleArgsFrameEvent, compartment: LifecycleArgsCompartment) {
        val count = compartment.enter_args[0] as Int
        val name = compartment.enter_args[1] as String
        this.sum = count + 1
        this.label = name
    }

    private fun _s_Active_hdl_user_tag(__e: LifecycleArgsFrameEvent, compartment: LifecycleArgsCompartment) {
        _context_stack[_context_stack.size - 1]._return = this.label
                        return
    }

    private fun _s_Active_hdl_user_total(__e: LifecycleArgsFrameEvent, compartment: LifecycleArgsCompartment) {
        _context_stack[_context_stack.size - 1]._return = this.sum
                        return
    }

    companion object {
        @JvmStatic fun __create(): LifecycleArgs {
            val c = LifecycleArgs()
            c.__frame_init()
            return c
        }    }
}
